--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,17 @@
 .read-the-docs {
   color: #888;
 }
+
+@keyframes marquee {
+  0% {
+    transform: translateX(0%);
+  }
+  100% {
+    transform: translateX(-50%);
+  }
+}
+
+.animate-marquee {
+  animation: marquee 30s linear infinite;
+  width: max-content;
+}
