--- a/src/App.css
+++ b/src/App.css
@@ -68,3 +68,6 @@
   mask-image: linear-gradient(to right, transparent 0%, black 15%, black 85%, transparent 100%);
 }
 
+body {
+  @apply font-electrolize;
+}
